--- a/components/table.scss
+++ b/components/table.scss
@@ -23,6 +23,7 @@
     transition: height 0.5s ease;
     border-radius: 0.5em;
     box-shadow: -2px 3px 15px -6px map.get($table-wrapper, "box-shadow-color");
+    margin: 0.75em 0;
   }
 
   .crud-table {
